# car-detect

./: CMakeLists.txt  README.md  nms.h  svm.cpp  svm.h  test-classifier.cpp  train-classifier.cpp
data/: README.md  getimginfo.py  neg_img_info.txt  pos_img_info.txt
model/: README.md
